# MPI-CompMatch

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  example.c  example_orig.c  format_code.sh  job_script.sh  low-level.c  low_level.h  partdiff-mpi.c  run.sh  setup_env.sh
IMB-ASYNC/: LICENSE  Makefile  README.md  job_script.sh  job_script_full_benchmark.sh  job_script_full_benchmark_one_bench_per_task.sh  parameters.txt  rebuild.sh  run_imb_command.txt
IMB-ASYNC/license/: license.txt
IMB-ASYNC/src_cpp/: Makefile  any.h  benchmark.h  benchmark_suite.h  benchmark_suite_base.h  benchmark_suites_collection.h  imb.cpp  scope.h
IMB-ASYNC/src_cpp/ASYNC/: Makefile.ASYNC.mk  async.cpp  async_benchmark.h  async_suite.h
SPMV_Kernel/: CMakeLists.txt  ComputeSPMV.cpp  ComputeSPMV.hpp  ExchangeHalo.cpp  ExchangeHalo.hpp  GenerateGeometry.cpp  GenerateGeometry.hpp  GenerateProblem.cpp  OptimizeProblem.cpp  OptimizeProblem.hpp  SetupHalo.cpp  SetupHalo.hpp  SparseMatrix.hpp  Vector.hpp  main.cpp
mpi_compiler_assistance_matching_pass/: CMakeLists.txt  analysis_results.cpp  analysis_results.h  conflict_detection.cpp  conflict_detection.h  function_coverage.cpp  implementation_specific.cpp  mpi_compiler_assistance_matching_pass.cpp  mpi_functions.cpp  mpi_functions.h  replacement.cpp  replacement.h
openmpi-patch/: Makefile  example.c  low-level.c  low_level.h  ompi_build.txt  one-sided-persistent.c  one-sided-persistent_two_sided_rendezvous.c  opt_impl.h
visualization/: generate_plots.py
